--- a/src/app/components/repartidores/repartidores.component.html
+++ b/src/app/components/repartidores/repartidores.component.html
@@ -26,10 +26,11 @@
             <table class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark text-center">
                     <tr>
-                        <th scope="col" style="width: 5%;">ID</th>
+                        <th scope="col" style="width: 10%;">ID</th>
                         <th scope="col" style="width: 30%;">Nombre</th>
                         <th scope="col" style="width: 20%;">Correo</th>
                         <th scope="col" style="width: 10%;">Teléfono</th>
+                        <th scope="col" style="width: 10%;">Estado</th>
                         <th scope="col" style="width: 20%;">Acciones</th>
                     </tr>
                 </thead>
@@ -39,6 +40,8 @@
                         <td class="align-middle"> {{resultado.nombre}} </td>
                         <td class="align-middle"> {{resultado.correo}} </td>
                         <td class="align-middle"> {{resultado.celular}} </td>
+                        <td class="align-middle" *ngIf="resultado.activo == 1"> Activo </td>
+                        <td class="align-middle" *ngIf="resultado.activo == 0"> Inactivo </td>
                         <td class="align-middle">
                             <button class="btn btn-primary" type="button" (click)="editarReapartidor( resultado.id_usuario )">Editar</button>
                             <button class="btn btn-danger ml-lg-2" type="button" (click)="eliminarRepartidor( resultado.id_usuario )">Eliminar</button>
@@ -58,6 +61,7 @@
                         <th scope="col" style="width: 30%;">Nombre</th>
                         <th scope="col" style="width: 20%;">Correo</th>
                         <th scope="col" style="width: 10%;">Teléfono</th>
+                        <th scope="col" style="width: 10%;">Estado</th>
                         <th scope="col" style="width: 20%;">Acciones</th>
                     </tr>
                 </thead>
@@ -67,6 +71,8 @@
                         <td class="align-middle"> {{repartidor.nombre}} </td>
                         <td class="align-middle"> {{repartidor.correo}} </td>
                         <td class="align-middle"> {{repartidor.celular}} </td>
+                        <td class="align-middle" *ngIf="repartidor.activo == 1"> Activo </td>
+                        <td class="align-middle" *ngIf="repartidor.activo == 0"> Inactivo </td>
                         <td class="align-middle">
                             <button class="btn btn-primary" type="button" (click)="editarReapartidor( repartidor.id_usuario )">Editar</button>
                             <button class="btn btn-danger ml-lg-2" type="button" (click)="eliminarRepartidor( repartidor.id_usuario )">Eliminar</button>
