editar repartidor terminado
current issue: images not being served

--- a/src/app/components/evento-editar/evento-editar.component.html
+++ b/src/app/components/evento-editar/evento-editar.component.html
@@ -39,8 +39,8 @@
                 </div>
                 <div class="card-footer">
                     <p class="card-text">
-                        <small class="text-muted"> Inicio: {{ evento.dia_inicio_evento | date:'fullDate' }} a las {{evento.hora_inicio_evento}} </small><br>
-                        <small class="text-muted"> Cierre: {{ evento.dia_conclusion_evento | date:'fullDate' }} a las {{evento.hora_conclusion_evento}}</small>
+                        <small class="text-muted"> Inicio: {{ evento.dia_inicio_evento }} a las {{evento.hora_inicio_evento}} </small><br>
+                        <small class="text-muted"> Cierre: {{ evento.dia_conclusion_evento }} a las {{evento.hora_conclusion_evento}}</small>
                     </p>
                 </div>
             </div>
