--- a/src/app/components/eventoEditar/eventoEditar.component.html
+++ b/src/app/components/eventoEditar/eventoEditar.component.html
@@ -99,7 +99,7 @@
                 <div class="card-body">
                     <div class="row h-100">
                         <div class="col-md-2 text-center my-auto">
-                            <img src="/assets/img/perfil-img.png" class="rounded-circle" alt="" width="50px" height="50px"><br>
+                            <img src="/assets/img/perfilimg.png" class="rounded-circle" alt="" width="50px" height="50px"><br>
                             <small>2020/07/8</small>
                         </div>
                         <div class="col-md-8 text-left">
@@ -115,7 +115,7 @@
                 <div class="card-body">
                     <div class="row h-100">
                         <div class="col-md-2 text-center my-auto">
-                            <img src="/assets/img/perfil-img.png" class="rounded-circle" alt="" width="50px" height="50px"><br>
+                            <img src="/assets/img/perfilimg.png" class="rounded-circle" alt="" width="50px" height="50px"><br>
                             <small>2020/07/8</small>
                         </div>
                         <div class="col-md-8 text-left">
@@ -131,7 +131,7 @@
                 <div class="card-body">
                     <div class="row h-100">
                         <div class="col-md-2 text-center my-auto">
-                            <img src="/assets/img/perfil-img.png" class="rounded-circle" alt="" width="50px" height="50px"><br>
+                            <img src="/assets/img/perfilimg.png" class="rounded-circle" alt="" width="50px" height="50px"><br>
                             <small>2020/07/8</small>
                         </div>
                         <div class="col-md-8 text-left">
