--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,27 +1,18 @@
-<div class="row d-flex align-items-stretch border">
-    <div class="col-md-12 d-flex align-items-stretch">
-        <div class="card bg-light d-block mx-auto">
-            <div class="card-body pt-4">
-                <div class="row">
-                    <div class="col-7">
-                        <h2 class="lead"><b>Juan</b></h2>
-                        <p class="text-muted text-sm"><b>Descripción: </b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, iste dicta temporibus adipisci doloribus assumenda ut. </p>
-                        <ul class="ml-4 mb-0 fa-ul text-muted">
-                            <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Telefono #: + 800 - 12 12 23 52</li>
-                        </ul>
-                    </div>
-                    <div class="col-5 text-center">
-                        <img src="/assets/dist/img/user1-128x128.jpg" alt="" class="img-circle img-fluid">
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <div class="text-right">
-                    <a href="#" class="btn btn-sm btn-primary">
-                        <i class="fas fa-user"></i> Editar Perfil
-                    </a>
-                </div>
-            </div>
+<div class="container-fluid animated fadeIn fast pt-2">
+    <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-md-2 text-center my-auto">
+            <button class="btn btn-outline-danger" (click)="cerrarSesion()">Cerrar Sesión</button>
+        </div>
+    </div>
+    <div class="row mt-3 justify-content-center align-items-center">
+        <div class="col-md-5 p-0">
+            <ul class="list-group">
+                <li class="list-group-item">Nombre: {{ admin.nombre }}</li>
+                <li class="list-group-item">Correo: {{ admin.correo }}</li>
+                <li class="list-group-item">Celular: {{ admin.celular }}</li>
+                <li class="list-group-item">Celular Extra: {{ admin.celular_ext }}</li>
+                <li class="list-group-item">Fecha de nacimiento: {{ admin.fec_nac }}</li>
+            </ul>
         </div>
     </div>
 </div>
