--- a/src/app/components/eventoEditar/eventoEditar.component.html
+++ b/src/app/components/eventoEditar/eventoEditar.component.html
@@ -146,6 +146,124 @@
         </div>
     </div>
 
+    <div class="card">
+        <div class="card-header">
+            <h4>Estadísticas de Evento.</h4>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Compras por edad.
+                        </div>
+                        <div class="card-body">
+                            <canvas baseChart [colors]="barChartColors" [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType"></canvas>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Ventas totales.
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-striped table-bordered table-hover">
+                                <thead class="thead-dark text-center">
+                                    <tr>
+                                        <th scope="col" style="width: 15%;">Boleto</th>
+                                        <th scope="col" style="width: 10%;">Cantidad</th>
+                                        <th scope="col" style="width: 10%;">Subtotal</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="text-center">
+                                    <tr *ngFor="let venta of ventasTotales">
+                                        <th scope="row" class="align-middle"> {{venta.nombre}} </th>
+                                        <td class="align-middle"> {{venta.cantidad}} </td>
+                                        <td class="align-middle"> {{venta.subtotal | currency:'MXN':'symbol'}} </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Ventas por Dia.
+                        </div>
+                        <div class="card-body text-center">
+                            <div class="input-group input-group-sm">
+                                <input class="form-control" type="date" placeholder="Buscar" #fecha>
+                            </div>
+                            <button class="btn btn-outline-success mx-auto d-block mt-4" (click)="buscarVentasDia(fecha.value)">Buscar Ventas</button>
+                            <h5 class="text-danger mt-3" *ngIf="hayVentasDia == false"> No se encontraron ventas. </h5>
+
+                            <table class="table table-striped table-bordered table-hover mt-3" *ngIf="hayVentasDia">
+                                <thead class="thead-dark text-center">
+                                    <tr>
+                                        <th scope="col" style="width: 15%;">Boleto</th>
+                                        <th scope="col" style="width: 10%;">Cantidad</th>
+                                        <th scope="col" style="width: 10%;">Subtotal</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="text-center">
+                                    <tr *ngFor="let venta of ventasDia">
+                                        <th scope="row" class="align-middle"> {{venta.nombre}} </th>
+                                        <td class="align-middle"> {{venta.cantidad}} </td>
+                                        <td class="align-middle"> {{venta.subtotal | currency:'MXN':'symbol'}} </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Ventas por Rango de Fechas.
+                        </div>
+                        <div class="card-body text-center">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="input-group input-group-sm">
+                                        <input class="form-control" type="date" placeholder="Buscar" #fecha1>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="input-group input-group-sm">
+                                        <input class="form-control" type="date" placeholder="Buscar" #fecha2>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="btn btn-outline-success mx-auto d-block mt-4" (click)="getVentasRango( fecha1.value, fecha2.value )">Buscar Ventas</button>
+                            <h5 class="text-danger mt-3" *ngIf="hayVentasRango == false"> No se encontraron ventas. </h5>
+
+                            <table class="table table-striped table-bordered table-hover mt-3" *ngIf="hayVentasRango">
+                                <thead class="thead-dark text-center">
+                                    <tr>
+                                        <th scope="col" style="width: 15%;">Boleto</th>
+                                        <th scope="col" style="width: 10%;">Cantidad</th>
+                                        <th scope="col" style="width: 10%;">Subtotal</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="text-center">
+                                    <tr *ngFor="let venta of ventasRango">
+                                        <th scope="row" class="align-middle"> {{venta.nombre}} </th>
+                                        <td class="align-middle"> {{venta.cantidad}} </td>
+                                        <td class="align-middle"> {{venta.subtotal | currency:'MXN':'symbol'}} </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="card mb-3 border-primary">
         <div class="card-header border-primary">
             <h4>Opciones de edición</h4>
