--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid table-responsive animated fadeIn fast">
     <div class="jumbotron">
         <h1 class="display-4">Bienvenido, Adminstrador.</h1>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, repellendus iste illum pariatur impedit ad blanditiis fuga commodi molestias dolorem accusantium? Explicabo facilis asperiores doloribus porro accusantium! Molestiae, necessitatibus
