--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -46,6 +46,12 @@
                                 <p>Repartidores</p>
                             </a>
                         </li>
+                        <!-- <li class="nav-item">
+                            <a [routerLink]="['estadisticas']" class="nav-link">
+                                <i class="nav-icon fas fa-chart-bar"></i>
+                                <p>Estadísticas</p>
+                            </a>
+                        </li> -->
                     </ul>
                 </nav>
             </div>
