--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -26,11 +26,11 @@
             <table class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark text-center">
                     <tr>
-                        <th scope="col" style="width: 5%;">ID</th>
-                        <th scope="col" style="width: 30%;">Nombre</th>
+                        <th scope="col" style="width: 10%;">ID</th>
+                        <th scope="col" style="width: 20%;">Nombre</th>
                         <th scope="col" style="width: 20%;">Correo</th>
                         <th scope="col" style="width: 10%;">Estado</th>
-                        <th scope="col" style="width: 10%;">Acciones</th>
+                        <th scope="col" style="width: 20%;">Acciones</th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
@@ -42,6 +42,7 @@
                         <td class="align-middle" *ngIf="resultado.activo == 0"> Inactivo </td>
                         <td class="align-middle">
                             <button class="btn btn-danger" type="button" (click)="eliminarUsuario(resultado.id_usuario)">Eliminar</button>
+                            <button class="btn btn-primary" type="button">Ver Usuario</button>
                         </td>
                     </tr>
                 </tbody>
@@ -54,11 +55,11 @@
             <table class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark text-center">
                     <tr>
-                        <th scope="col" style="width: 5%;">ID</th>
-                        <th scope="col" style="width: 30%;">Nombre</th>
+                        <th scope="col" style="width: 10%;">ID</th>
+                        <th scope="col" style="width: 20%;">Nombre</th>
                         <th scope="col" style="width: 20%;">Correo</th>
                         <th scope="col" style="width: 10%;">Estado</th>
-                        <th scope="col" style="width: 10%;">Acciones</th>
+                        <th scope="col" style="width: 20%;">Acciones</th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
@@ -70,6 +71,7 @@
                         <td class="align-middle" *ngIf="usuario.activo == 0"> Inactivo </td>
                         <td class="align-middle">
                             <button class="btn btn-danger" type="button" (click)="eliminarUsuario(usuario.id_usuario)">Eliminar</button>
+                            <button class="btn btn-primary ml-3" type="button" (click)="verUsuario(usuario.id_usuario)">Ver Usuario</button>
                         </td>
                     </tr>
                 </tbody>
